Update Yggdrasil Notifications